added multiple grid alignment examples

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,19 @@ h2 {
     font-weight: 800;
 }
 
+h3 {
+    text-align: left;
+    font-weight: 800;
+}
+
+h4 {
+    color: black;
+}
+
 div.row {
     color: white;
+}
+
+img {
+    margin-top: 20px;
 }
